--- a/css/main.css
+++ b/css/main.css
@@ -31,6 +31,7 @@ body {
 /*COMPONENTS*/
 .header {
   background: hsl(293.51, 54.41%, 26.67%);
+  position: relative;
 }
 .header__wrapper {
   display: flex;
@@ -53,7 +54,51 @@ body {
   display: none;
 }
 .header__nav {
-  display: none;
+  position: absolute;
+  background: pink;
+  top: 0%;
+  right: -100rem;
+  width: 100%;
+  height: 100%;
+  transition: 0.5s ease;
+}
+.header__nav img {
+  width: 15rem;
+  padding: 2rem;
+}
+.header__nav ul {
+  display: flex;
+  flex-direction: column;
+  margin-top: 6rem;
+  margin-bottom: 5rem;
+}
+.header__nav ul li {
+  padding: 2.5rem;
+}
+.header__nav ul li a {
+  color: hsl(0, 0%, 0%);
+  font-size: 2rem;
+  font-weight: 600;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+.header__nav ul li a i {
+  color: hsl(0, 0%, 0%);
+}
+.header__nav__btn {
+  display: flex;
+  flex-direction: column;
+  text-align: center;
+  gap: 2rem;
+  position: absolute;
+  width: 100%;
+  padding: 2rem;
+  bottom: 3rem;
+}
+.header__nav.open {
+  right: 0rem;
+  transition: 0.5s ease;
 }
 .header__actions {
   display: flex;
@@ -63,6 +108,9 @@ body {
 .header__actions a i {
   color: hsl(0, 0%, 100%);
 }
+.header__actions .toggle__menu {
+  z-index: 999;
+}
 .header__actions .toggle__menu span {
   width: 3rem;
   height: 0.2rem;
@@ -71,8 +119,40 @@ body {
   border-radius: 5rem;
 }
 .header__actions .toggle__menu span:nth-child(2) {
+  margin: 0.5rem 0;
+}
+.header__actions .toggle__menu span:nth-child(2) {
   margin: 0.3rem 0;
+}
+.header__actions .toggle__menu.open span:first-child {
+  transform: translateY(9px) rotate(225deg);
+  transition: 0.5s ease;
+}
+.header__actions .toggle__menu.open span:nth-child(2) {
+  opacity: 0;
+}
+.header__actions .toggle__menu.open span:last-child {
+  transform: translateY(-1px) rotate(-45deg);
+  transition: 0.5 ease;
 }
 .header__actions__btn {
   display: none;
+}
+
+.btn {
+  display: inline-block;
+  padding: 1.5rem 1rem;
+  border: 1px solid transparent;
+  color: hsl(0, 0%, 0%);
+  font-weight: 550;
+}
+.btn.bg--primary {
+  background: hsl(293.51, 54.41%, 26.67%);
+  color: hsl(0, 0%, 100%);
+  border: 1px solid hsl(0, 0%, 100%);
+}
+.btn.bg--light {
+  background: hsl(0, 0%, 100%);
+  color: hsl(293.51, 54.41%, 26.67%);
+  border: 1px solid hsl(293.51, 54.41%, 26.67%);
 }/*# sourceMappingURL=main.css.map */
