--- a/_01-variables.scss
+++ b/_01-variables.scss
@@ -3,6 +3,7 @@ $clr-dprimary: hsl(300,62.16%,14.51%);
 $clr-fwhite:hsl(34, 42%, 93%);
 $clr-light:hsl(0,0%,100%);
 $clr-dark:hsl(0,0%,0%);
+$clr-blue: #4285f4;
 
 $ff-primary:'Raleway', sans-serif;
 
