--- a/_04-mixins.scss
+++ b/_04-mixins.scss
@@ -3,3 +3,9 @@
         @content;
     }
 }
+
+@mixin imgFit($width: 1rem, $height: 1rem) {
+        width: $width;
+        height: $height;
+        object-fit: cover;
+    }
