--- a/main.scss
+++ b/main.scss
@@ -8,3 +8,7 @@
 /*COMPONENTS*/
 @import "./dist/components/header";
 @import "./dist/components/btn";
+
+/*PAGES*/
+
+@import "./dist/pages/landing";
