--- a/css/main.css
+++ b/css/main.css
@@ -70,7 +70,7 @@ body {
 }
 .header__nav {
   position: absolute;
-  background: pink;
+  background: hsl(0, 0%, 100%);
   top: 0%;
   right: -100rem;
   width: 100%;
@@ -107,7 +107,7 @@ body {
   transition: 0.5s ease;
 }
 .header__nav ul.nav ul.drop {
-  background: red;
+  background: hsl(0, 0%, 100%);
   margin: 0 3rem;
   max-height: 0rem;
   overflow: hidden;
@@ -154,6 +154,7 @@ body {
 }
 .header__actions .toggle__menu span:nth-child(2) {
   margin: 0.5rem 0;
+  display: block;
 }
 .header__actions .toggle__menu span:nth-child(2) {
   margin: 0.3rem 0;
@@ -167,6 +168,7 @@ body {
 }
 .header__actions .toggle__menu.open span:nth-child(2) {
   opacity: 0;
+  transition: 0.5s ease;
 }
 .header__actions .toggle__menu.open span:last-child {
   transform: translateY(-1px) rotate(-145deg);
@@ -202,17 +204,17 @@ body {
     transform: scale(1.1);
     transition: 0.5s ease;
   }
-}
-.header__actions .toggle__menu {
-  display: none;
-}
-.header__actions__btn {
-  display: flex;
-  align-items: center;
-  gap: 2rem;
-}
-.header__actions__btn a.sign {
-  color: hsl(0, 0%, 100%);
+  .header__actions .toggle__menu {
+    display: none;
+  }
+  .header__actions__btn {
+    display: flex;
+    align-items: center;
+    gap: 2rem;
+  }
+  .header__actions__btn a.sign {
+    color: hsl(0, 0%, 100%);
+  }
 }
 
 .btn {
@@ -279,4 +281,75 @@ body {
   z-index: 999;
   border: 1px solid hsl(0, 0%, 100%);
   color: hsl(0, 0%, 100%);
+}
+.btn.bg--blue {
+  background: #4285f4;
+  color: hsl(0, 0%, 100%);
+  border: 1px solid hsl(0, 0%, 100%);
+}
+.btn.bg--blue:before {
+  content: "";
+  width: 0%;
+  height: 100%;
+  background-color: hsl(0, 0%, 100%);
+  transform-origin: left;
+  display: block;
+  position: absolute;
+  top: 0;
+  left: 0;
+  z-index: -1;
+  transition: 0.5s ease-in-out;
+  border-radius: 1rem;
+}
+.btn.bg--blue:hover::before {
+  width: 100%;
+  transition: 0.5s ease;
+}
+.btn.bg--blue:hover {
+  z-index: 999;
+  border: 1px solid hsl(293.51, 54.41%, 26.67%);
+  color: hsl(293.51, 54.41%, 26.67%);
+}
+
+/*PAGES*/
+.banner .container {
+  background-color: hsl(293.51, 54.41%, 26.67%);
+}
+.banner__wrapper {
+  margin-top: 10rem;
+}
+.banner__items {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  text-align: center;
+  align-items: center;
+}
+.banner__items h1 {
+  font-size: 4rem;
+  color: hsl(0, 0%, 100%);
+}
+.banner__items h1 span {
+  color: #ECB22E;
+}
+.banner__items p {
+  font-size: 1.5rem;
+  color: hsl(0, 0%, 100%);
+  font-weight: 600;
+  width: 40rem;
+  margin-bottom: 2.5rem;
+}
+.banner__items ul li a {
+  margin-bottom: 1rem;
+  width: 45rem;
+}
+.banner__items ul li a img {
+  width: 2rem;
+  background-color: hsl(0, 0%, 100%);
+}
+.banner__vid video {
+  width: 100%;
+  height: 100%;
+  -o-object-fit: cover;
+     object-fit: cover;
 }/*# sourceMappingURL=main.css.map */
