--- a/css/main.css
+++ b/css/main.css
@@ -35,6 +35,7 @@ body {
   position: relative;
   position: fixed;
   width: 100%;
+  z-index: 999;
 }
 .header .container {
   transition: 1s ease;
@@ -43,10 +44,11 @@ body {
   background: transparent;
 }
 .header.white .container {
-  background: blue;
+  background: hsl(293.51, 54.41%, 26.67%);
   border-radius: 3rem;
   margin-top: 5rem;
   transition: 2s ease;
+  border: 1px solid hsl(0, 0%, 100%);
 }
 .header__wrapper {
   display: flex;
@@ -224,7 +226,7 @@ body {
   color: hsl(0, 0%, 0%);
   font-weight: 550;
   position: relative;
-  border-radius: 1rem;
+  border-radius: 0.5rem;
 }
 .btn.bg--primary {
   background: hsl(293.51, 54.41%, 26.67%);
@@ -243,7 +245,7 @@ body {
   left: 0;
   z-index: -1;
   transition: 0.5s ease-in-out;
-  border-radius: 1rem;
+  border-radius: 0.5rem;
 }
 .btn.bg--primary:hover::before {
   width: 100%;
@@ -271,7 +273,7 @@ body {
   left: 0;
   z-index: -1;
   transition: 0.5s ease-in-out;
-  border-radius: 1rem;
+  border-radius: 0.5rem;
 }
 .btn.bg--light:hover::before {
   width: 100%;
@@ -299,7 +301,7 @@ body {
   left: 0;
   z-index: -1;
   transition: 0.5s ease-in-out;
-  border-radius: 1rem;
+  border-radius: 0.5rem;
 }
 .btn.bg--blue:hover::before {
   width: 100%;
@@ -312,11 +314,13 @@ body {
 }
 
 /*PAGES*/
-.banner .container {
+.banner {
   background-color: hsl(293.51, 54.41%, 26.67%);
+  position: relative;
+  height: 70vh;
 }
 .banner__wrapper {
-  margin-top: 10rem;
+  margin-top: 8rem;
 }
 .banner__items {
   display: flex;
@@ -339,17 +343,117 @@ body {
   width: 40rem;
   margin-bottom: 2.5rem;
 }
+.banner__items p:last-child {
+  display: none;
+}
 .banner__items ul li a {
   margin-bottom: 1rem;
   width: 45rem;
 }
 .banner__items ul li a img {
-  width: 2rem;
+  width: 5rem;
   background-color: hsl(0, 0%, 100%);
+  position: absolute;
+  left: 0;
+  top: 0;
+  border-radius: 0.5rem;
 }
 .banner__vid video {
   width: 100%;
-  height: 100%;
+  height: 20rem;
   -o-object-fit: cover;
      object-fit: cover;
+  margin-top: 2.5rem;
+  position: absolute;
+  bottom: 0;
+  left: 0;
+}
+@media screen and (min-width: 940px) {
+  .banner__wrapper {
+    display: grid;
+    grid-template-columns: 2fr 2fr;
+    align-items: center;
+    grid-gap: 5rem;
+  }
+  .banner__items {
+    display: unset;
+    flex-direction: unset;
+    justify-content: unset;
+    text-align: unset;
+    align-items: unset;
+  }
+  .banner__items h1 {
+    font-size: 6.5rem;
+  }
+  .banner__items p {
+    width: unset;
+    font-size: 2rem;
+    font-weight: unset;
+    max-width: 56rem;
+  }
+  .banner__items p:last-child {
+    display: unset;
+  }
+  .banner__items ul {
+    display: flex;
+    width: unset;
+  }
+  .banner__items ul li {
+    margin-right: 1rem;
+  }
+  .banner__items ul li a {
+    width: unset;
+    width: 30rem;
+    text-align: center;
+  }
+  .banner__vid video {
+    width: 100%;
+    height: 100%;
+    -o-object-fit: cover;
+       object-fit: cover;
+    margin-top: 2.5rem;
+    position: unset;
+  }
+}
+
+/*TRUST*/
+.trust {
+  background-color: #F4EDE4;
+}
+.trust__text p {
+  font-weight: 600;
+  text-align: center;
+  margin: 2rem;
+}
+.trust__items {
+  align-items: center;
+  justify-content: center;
+  display: flex;
+  flex-wrap: wrap;
+  gap: 2rem;
+}
+.trust__items img {
+  width: 20%;
+  height: 20%;
+  -o-object-fit: cover;
+     object-fit: cover;
+}
+@media screen and (min-width: 940px) {
+  .trust__items {
+    display: unset;
+    display: flex;
+    flex-wrap: unset;
+    flex-direction: row;
+    gap: 5rem;
+  }
+  .trust__items img {
+    width: 100%;
+    height: 100%;
+    -o-object-fit: cover;
+       object-fit: cover;
+    width: 10rem;
+  }
+  .trust__items img:nth-child(5) {
+    width: 25rem;
+  }
 }/*# sourceMappingURL=main.css.map */
