--- a/_04-mixins.scss
+++ b/_04-mixins.scss
@@ -9,3 +9,15 @@
         height: $height;
         object-fit: cover;
     }
+
+@mixin centerAll(){
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+
+@mixin gridEven($cols,$gap){
+    display: grid;
+    grid-template-columns: repeat($cols,1fr);
+    grid-gap: $gap;
+}
