--- a/css/main.css
+++ b/css/main.css
@@ -29,6 +29,577 @@ body {
   margin: 0 auto;
 }
 
+/*COLORS*/
+.text--primary {
+  color: hsl(293.51, 54.41%, 26.67%);
+}
+
+.text--dprimary {
+  color: hsl(300, 62.16%, 14.51%);
+}
+
+.text--fwhite {
+  color: hsl(34, 42%, 93%);
+}
+
+.text--light {
+  color: hsl(0, 0%, 100%);
+}
+
+.text--black {
+  color: hsl(0, 0%, 0%);
+}
+
+.text--blue {
+  color: #4285f4;
+}
+
+.bg--primary {
+  background: hsl(293.51, 54.41%, 26.67%);
+}
+
+.bg--dprimary {
+  background: hsl(300, 62.16%, 14.51%);
+}
+
+.bg--fwhite {
+  background: hsl(34, 42%, 93%);
+}
+
+.bg--light {
+  background: hsl(0, 0%, 100%);
+}
+
+.bg--black {
+  background: hsl(0, 0%, 0%);
+}
+
+.bg--blue {
+  background: #4285f4;
+}
+
+/*ALIGNMENTS*/
+.d--none {
+  display: none;
+}
+
+.d--block {
+  display: block;
+}
+
+.d--flex {
+  display: flex;
+}
+
+.d--inline-block {
+  display: inline-block;
+}
+
+/*MARGIN PADDING*/
+.my--0 {
+  margin: 0rem 0;
+}
+
+.mx--0 {
+  margin: 0 0rem;
+}
+
+.m--0 {
+  margin: 0rem;
+}
+
+.py--0 {
+  padding: 0rem 0;
+}
+
+.px--0 {
+  padding: 0 0rem;
+}
+
+.p--0 {
+  padding: 0rem;
+}
+
+.my--1 {
+  margin: 1rem 0;
+}
+
+.mx--1 {
+  margin: 0 1rem;
+}
+
+.m--1 {
+  margin: 1rem;
+}
+
+.py--1 {
+  padding: 1rem 0;
+}
+
+.px--1 {
+  padding: 0 1rem;
+}
+
+.p--1 {
+  padding: 1rem;
+}
+
+.my--2 {
+  margin: 2rem 0;
+}
+
+.mx--2 {
+  margin: 0 2rem;
+}
+
+.m--2 {
+  margin: 2rem;
+}
+
+.py--2 {
+  padding: 2rem 0;
+}
+
+.px--2 {
+  padding: 0 2rem;
+}
+
+.p--2 {
+  padding: 2rem;
+}
+
+.my--3 {
+  margin: 3rem 0;
+}
+
+.mx--3 {
+  margin: 0 3rem;
+}
+
+.m--3 {
+  margin: 3rem;
+}
+
+.py--3 {
+  padding: 3rem 0;
+}
+
+.px--3 {
+  padding: 0 3rem;
+}
+
+.p--3 {
+  padding: 3rem;
+}
+
+.my--4 {
+  margin: 4rem 0;
+}
+
+.mx--4 {
+  margin: 0 4rem;
+}
+
+.m--4 {
+  margin: 4rem;
+}
+
+.py--4 {
+  padding: 4rem 0;
+}
+
+.px--4 {
+  padding: 0 4rem;
+}
+
+.p--4 {
+  padding: 4rem;
+}
+
+.my--5 {
+  margin: 5rem 0;
+}
+
+.mx--5 {
+  margin: 0 5rem;
+}
+
+.m--5 {
+  margin: 5rem;
+}
+
+.py--5 {
+  padding: 5rem 0;
+}
+
+.px--5 {
+  padding: 0 5rem;
+}
+
+.p--5 {
+  padding: 5rem;
+}
+
+.my--6 {
+  margin: 6rem 0;
+}
+
+.mx--6 {
+  margin: 0 6rem;
+}
+
+.m--6 {
+  margin: 6rem;
+}
+
+.py--6 {
+  padding: 6rem 0;
+}
+
+.px--6 {
+  padding: 0 6rem;
+}
+
+.p--6 {
+  padding: 6rem;
+}
+
+.my--7 {
+  margin: 7rem 0;
+}
+
+.mx--7 {
+  margin: 0 7rem;
+}
+
+.m--7 {
+  margin: 7rem;
+}
+
+.py--7 {
+  padding: 7rem 0;
+}
+
+.px--7 {
+  padding: 0 7rem;
+}
+
+.p--7 {
+  padding: 7rem;
+}
+
+.my--8 {
+  margin: 8rem 0;
+}
+
+.mx--8 {
+  margin: 0 8rem;
+}
+
+.m--8 {
+  margin: 8rem;
+}
+
+.py--8 {
+  padding: 8rem 0;
+}
+
+.px--8 {
+  padding: 0 8rem;
+}
+
+.p--8 {
+  padding: 8rem;
+}
+
+.my--9 {
+  margin: 9rem 0;
+}
+
+.mx--9 {
+  margin: 0 9rem;
+}
+
+.m--9 {
+  margin: 9rem;
+}
+
+.py--9 {
+  padding: 9rem 0;
+}
+
+.px--9 {
+  padding: 0 9rem;
+}
+
+.p--9 {
+  padding: 9rem;
+}
+
+.my--10 {
+  margin: 10rem 0;
+}
+
+.mx--10 {
+  margin: 0 10rem;
+}
+
+.m--10 {
+  margin: 10rem;
+}
+
+.py--10 {
+  padding: 10rem 0;
+}
+
+.px--10 {
+  padding: 0 10rem;
+}
+
+.p--10 {
+  padding: 10rem;
+}
+
+.my--11 {
+  margin: 11rem 0;
+}
+
+.mx--11 {
+  margin: 0 11rem;
+}
+
+.m--11 {
+  margin: 11rem;
+}
+
+.py--11 {
+  padding: 11rem 0;
+}
+
+.px--11 {
+  padding: 0 11rem;
+}
+
+.p--11 {
+  padding: 11rem;
+}
+
+.my--12 {
+  margin: 12rem 0;
+}
+
+.mx--12 {
+  margin: 0 12rem;
+}
+
+.m--12 {
+  margin: 12rem;
+}
+
+.py--12 {
+  padding: 12rem 0;
+}
+
+.px--12 {
+  padding: 0 12rem;
+}
+
+.p--12 {
+  padding: 12rem;
+}
+
+.my--13 {
+  margin: 13rem 0;
+}
+
+.mx--13 {
+  margin: 0 13rem;
+}
+
+.m--13 {
+  margin: 13rem;
+}
+
+.py--13 {
+  padding: 13rem 0;
+}
+
+.px--13 {
+  padding: 0 13rem;
+}
+
+.p--13 {
+  padding: 13rem;
+}
+
+.my--14 {
+  margin: 14rem 0;
+}
+
+.mx--14 {
+  margin: 0 14rem;
+}
+
+.m--14 {
+  margin: 14rem;
+}
+
+.py--14 {
+  padding: 14rem 0;
+}
+
+.px--14 {
+  padding: 0 14rem;
+}
+
+.p--14 {
+  padding: 14rem;
+}
+
+.my--15 {
+  margin: 15rem 0;
+}
+
+.mx--15 {
+  margin: 0 15rem;
+}
+
+.m--15 {
+  margin: 15rem;
+}
+
+.py--15 {
+  padding: 15rem 0;
+}
+
+.px--15 {
+  padding: 0 15rem;
+}
+
+.p--15 {
+  padding: 15rem;
+}
+
+.my--16 {
+  margin: 16rem 0;
+}
+
+.mx--16 {
+  margin: 0 16rem;
+}
+
+.m--16 {
+  margin: 16rem;
+}
+
+.py--16 {
+  padding: 16rem 0;
+}
+
+.px--16 {
+  padding: 0 16rem;
+}
+
+.p--16 {
+  padding: 16rem;
+}
+
+.my--17 {
+  margin: 17rem 0;
+}
+
+.mx--17 {
+  margin: 0 17rem;
+}
+
+.m--17 {
+  margin: 17rem;
+}
+
+.py--17 {
+  padding: 17rem 0;
+}
+
+.px--17 {
+  padding: 0 17rem;
+}
+
+.p--17 {
+  padding: 17rem;
+}
+
+.my--18 {
+  margin: 18rem 0;
+}
+
+.mx--18 {
+  margin: 0 18rem;
+}
+
+.m--18 {
+  margin: 18rem;
+}
+
+.py--18 {
+  padding: 18rem 0;
+}
+
+.px--18 {
+  padding: 0 18rem;
+}
+
+.p--18 {
+  padding: 18rem;
+}
+
+.my--19 {
+  margin: 19rem 0;
+}
+
+.mx--19 {
+  margin: 0 19rem;
+}
+
+.m--19 {
+  margin: 19rem;
+}
+
+.py--19 {
+  padding: 19rem 0;
+}
+
+.px--19 {
+  padding: 0 19rem;
+}
+
+.p--19 {
+  padding: 19rem;
+}
+
+.my--20 {
+  margin: 20rem 0;
+}
+
+.mx--20 {
+  margin: 0 20rem;
+}
+
+.m--20 {
+  margin: 20rem;
+}
+
+.py--20 {
+  padding: 20rem 0;
+}
+
+.px--20 {
+  padding: 0 20rem;
+}
+
+.p--20 {
+  padding: 20rem;
+}
+
 /*COMPONENTS*/
 .header {
   background: hsl(293.51, 54.41%, 26.67%);
@@ -48,7 +619,7 @@ body {
   border-radius: 3rem;
   margin-top: 5rem;
   transition: 2s ease;
-  border: 1px solid hsl(0, 0%, 100%);
+  border: 1px solid hsl(293.51, 54.41%, 26.67%);
 }
 .header__wrapper {
   display: flex;
@@ -287,7 +858,7 @@ body {
 .btn.bg--blue {
   background: #4285f4;
   color: hsl(0, 0%, 100%);
-  border: 1px solid hsl(0, 0%, 100%);
+  border: 1px solid #4285f4;
 }
 .btn.bg--blue:before {
   content: "";
@@ -317,7 +888,8 @@ body {
 .banner {
   background-color: hsl(293.51, 54.41%, 26.67%);
   position: relative;
-  height: 700px;
+  height: 800px;
+  width: 100%;
 }
 .banner__wrapper {
   margin-top: 8rem;
@@ -364,7 +936,7 @@ body {
 }
 .banner__vid video {
   width: 100%;
-  height: 20rem;
+  height: 30rem;
   -o-object-fit: cover;
      object-fit: cover;
   margin-top: 2.5rem;
@@ -480,12 +1052,20 @@ body {
   flex-direction: column;
   gap: 2.5rem;
 }
+.bring__item:nth-child(even) video {
+  transform: translateX(1.5rem);
+}
 .bring__item video {
   transform: translateX(-1.5rem);
 }
-.bring__item:nth-child(even) {
-  transform: translateX(1.9rem);
+.bring__item .bring__text h1 {
+  font-size: 2.9rem;
 }
-.bring__text h1 {
-  font-size: 3rem;
+.bring__item .bring__text p {
+  width: 40rem;
+  margin-top: 1rem;
+  margin-bottom: 1rem;
+}
+.bring__item .bring__text a {
+  color: #1264a3;
 }/*# sourceMappingURL=main.css.map */
