--- a/main.scss
+++ b/main.scss
@@ -8,7 +8,9 @@
 /*COMPONENTS*/
 @import "./dist/components/header";
 @import "./dist/components/btn";
+@import "./dist/components/footer";
 
 /*PAGES*/
 
 @import "./dist/pages/landing";
+
