--- a/css/main.css
+++ b/css/main.css
@@ -884,6 +884,38 @@ body {
   color: hsl(293.51, 54.41%, 26.67%);
 }
 
+.footer__left ul li {
+  font-size: 1.4rem;
+  padding: 2rem 0;
+  font-weight: bold;
+}
+.footer__left ul li a {
+  color: hsl(0, 0%, 0%);
+}
+.footer__left .modal {
+  padding: 2rem;
+  overflow-y: auto;
+  display: none;
+  width: 100%;
+  height: 100%;
+  position: fixed;
+  background: #4285f4;
+  top: auto;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  z-index: 9999;
+}
+.footer__left .modal.active {
+  display: block;
+}
+.footer__left .modal button {
+  float: right;
+  background: transparent;
+  border: 0 solid transparent;
+  font-size: 2.5rem;
+}
+
 /*PAGES*/
 .banner {
   background-color: hsl(293.51, 54.41%, 26.67%);
@@ -1068,4 +1100,42 @@ body {
 }
 .bring__item .bring__text a {
   color: #1264a3;
+}
+@media screen and (min-width: 940px) {
+  .bring__item {
+    flex-direction: row;
+    align-items: center;
+    gap: 10rem;
+  }
+  .bring__item:nth-child(even) {
+    flex-direction: row-reverse;
+    gap: 27rem;
+    justify-content: left;
+  }
+  .bring__item:nth-child(even) video {
+    transform: unset;
+  }
+  .bring__item video {
+    transform: unset;
+    width: 70rem;
+  }
+  .bring__item .bring__text h1 {
+    font-size: 4.5rem;
+    width: 40rem;
+  }
+  .bring__item:first-child h1 {
+    width: 50rem;
+  }
+}
+
+/*TEAMS*/
+.teams {
+  padding-top: 5rem;
+  padding-bottom: 5rem;
+}
+.teams__wrapper {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  text-align: center;
 }/*# sourceMappingURL=main.css.map */
