--- a/main.scss
+++ b/main.scss
@@ -9,6 +9,7 @@
 @import "./dist/components/header";
 @import "./dist/components/btn";
 @import "./dist/components/footer";
+@import "./dist/components/overlay";
 
 /*PAGES*/
 
