--- a/css/main.css
+++ b/css/main.css
@@ -884,6 +884,9 @@ body {
   color: hsl(293.51, 54.41%, 26.67%);
 }
 
+.footer__wrapper {
+  border-top: solid 2px hsl(34, 42%, 93%);
+}
 .footer__left ul li {
   font-size: 1.4rem;
   padding: 2rem 0;
@@ -922,19 +925,46 @@ body {
 .footer .modal p {
   text-align: center;
   font-weight: 100;
-  margin: 1.5rem 0;
+  margin: 1.5rem 6rem;
 }
 .footer .country {
   display: grid;
   grid-template-columns: 1fr;
+  margin-left: 5rem;
+}
+.footer .country ul li {
+  padding: 1rem 0;
+}
+.footer .country ul li:not(:first-child) {
+  font-weight: 100;
 }
 @media screen and (min-width: 940px) {
+  .footer__left ul {
+    display: flex;
+    flex-direction: row;
+    gap: 1.5rem;
+  }
   .footer .modal {
     border: 1px solid hsl(0, 0%, 0%);
     max-width: 72rem;
     height: auto;
     margin: 0 auto;
     bottom: 15rem;
+  }
+  .footer .modal h2 {
+    text-align: unset;
+    margin: 1.5rem 5rem;
+  }
+  .footer .modal p {
+    text-align: unset;
+    margin: 1.5rem 5rem;
+  }
+  .footer .country {
+    display: grid;
+    grid-template-columns: 2fr 2fr 2fr;
+  }
+  .footer .country ul {
+    display: unset;
   }
 }
 
@@ -1111,6 +1141,7 @@ body {
 /*BRING*/
 .bring {
   background: hsl(34, 42%, 93%);
+  padding: 2.5rem 0;
 }
 .bring__wrapper {
   background: hsl(34, 42%, 93%);
@@ -1178,9 +1209,103 @@ body {
   align-items: center;
   text-align: center;
 }
+.teams__items h1 {
+  font-size: 3rem;
+  font-weight: 700;
+  margin: 0.5rem 0;
+}
+.teams__items p {
+  margin: 0.5rem 0;
+}
+.teams__items a {
+  margin: 0.5rem 0;
+  width: 45rem;
+}
+@media screen and (min-width: 940px) {
+  .teams__items h1 {
+    font-size: 4rem;
+    margin: 0.5rem 0;
+  }
+  .teams__items p {
+    margin: 0.5rem 0;
+  }
+  .teams__items a {
+    margin: 0.5rem 0;
+    margin-top: 2.5rem;
+    width: unset;
+    padding: 1.5rem 3rem;
+  }
+}
+
+/*PERCENT*/
+.percent__wrapper {
+  display: grid;
+  gap: 5rem;
+  justify-content: center;
+}
+.percent__wrapper .percent__items h3 {
+  font-size: 5rem;
+  color: hsl(293.51, 54.41%, 26.67%);
+  text-align: center;
+}
+.percent__wrapper .percent__items p {
+  width: 20rem;
+  text-align: center;
+}
+@media screen and (min-width: 940px) {
+  .percent__wrapper {
+    display: flex;
+    flex-direction: row;
+    gap: 20rem;
+    justify-content: center;
+  }
+  .percent__wrapper .percent__items h3 {
+    font-size: 6rem;
+    color: hsl(293.51, 54.41%, 26.67%);
+    text-align: center;
+  }
+  .percent__wrapper .percent__items p {
+    width: 20rem;
+    text-align: unset;
+  }
+}
+
+/*IBM*/
+.ibm {
+  margin: 5rem 0;
+}
+.ibm__wrapper .ibm__items video {
+  width: 100%;
+  height: 100%;
+  -o-object-fit: cover;
+     object-fit: cover;
+  transform: translateX(-1.5rem);
+  border-top-right-radius: 15rem;
+  border-bottom-right-radius: 15rem;
+  margin: 1.5rem 0;
+}
+.ibm__wrapper .ibm__text {
+  margin: 0 1rem;
+}
+.ibm__wrapper .ibm__text h3 {
+  font-size: 2.3rem;
+  font-weight: 100;
+  font-style: italic;
+  margin: 1.5rem 0;
+}
+.ibm__wrapper .ibm__text p {
+  font-weight: bold;
+}
+.ibm__wrapper .ibm__text:last-child {
+  font-weight: 100;
+}
 /*WORK SECTION*/
 .work {
   background: hsl(34, 42%, 93%);
+}
+.work__wrapper h1 {
+  text-align: center;
+  margin: 1.5rem 0;
 }
 .work .slider__item {
   height: 40rem;
@@ -1196,9 +1321,6 @@ body {
 }
 .work .slider__item img {
   width: 100%;
-}
-.work .slider__item .slider__actions {
-  margin-top: 13rem;
 }
 .work .tns-controls,
 .work button[data-action=stop] {
